--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App
+{
   display: flex;
   flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  align-items: center;
+}
+
+.NavBar
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  border: solid;
+  border-color: white;
+  border-width: 0 0 1px 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px 0 10px 0;
+  box-shadow: 0 0 5px #888;
 }
 
-.App-link {
-  color: #61dafb;
+.Footer
+{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  border: solid;
+  border-color: white;
+  border-width: 1px 0 0 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0 10px 0;
+  box-shadow: 0 0 5px #888;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.CollectionBackground
+{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100%;
+  background-color: white;
+  margin-top: 50px;
+  text-align: center;
 }
