--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,9 @@
-.App
+body
+{
+  width: 100%;
+}
+
+.Home
 {
   display: flex;
   flex-direction: column;
@@ -6,6 +11,13 @@
   height: 100vh;
   background-color: white;
   align-items: center;
+}
+
+.NotFound 
+{
+  width: 100%;
+  margin-top: 20%;
+  text-align: center;
 }
 
 .NavBar
@@ -53,4 +65,135 @@
   background-color: white;
   margin-top: 50px;
   text-align: center;
+}
+
+
+
+
+
+/* Styling for the admin dashboard */
+
+.AdminDashboard
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.DashboardHeaderArea
+{
+  padding: 25px 0 25px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.DashboardLogoutButton
+{
+  margin: 0 25px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  padding: 10px 15px 10px 15px;
+  position: absolute;
+  right: 10px;
+}
+
+.DashboardLogoutButton:hover
+{
+  cursor: pointer;
+}
+
+.DashboardLogoutButton p
+{
+  margin: 0;
+  font-size: small;
+  font-family: 'Fraunces', serif;
+  color: black;
+}
+
+.DashboardTitle
+{
+  height: fit-content;
+  width: fit-content;
+  text-align: center;
+  margin: 0;
+}
+
+.DashboardTitle h1
+{
+  margin: 0;
+  padding: 5px;
+  font-size: xx-large;
+  font-family: 'Italianno', cursive;
+  font-weight: 100;
+  color: black;
+}
+
+
+
+
+
+/* Styling for the admin login page */
+
+.AdminLogin
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;  
+}
+
+.LoginInput
+{
+  padding: 10px;
+  border: solid;
+  border-color: black;
+  border-radius: 25px;
+  border-width: 1px;
+
+  width: 300px;
+  text-align: center;
+  margin: 10px 0 10px 0;
+  
+  font-size: normal;
+  font-family: 'Fraunces', serif;
+}
+
+.LoginButton
+{
+  padding: 10px 30px 10px 30px;
+  border: solid;
+  border-color: black;
+  border-radius: 25px;
+  border-width: 1px;
+
+  text-align: center;
+  margin: 10px 0 10px 0;
+  background-color: white;
+  
+  font-size: normal;
+  font-family: 'Fraunces', serif;
+
+  transition: all 0.5s;
+}
+
+.LoginButton:hover
+{
+  cursor: pointer;
+  background-color: #cacaca;
+}
+
+.LoginTitle
+{
+  position: absolute;
+  top: 25px;
 }
