--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,15 +137,21 @@ p
 
 .DashboardLogoutButton
 {
+  font-size: small;
+  font-family: 'Fraunces', serif;
+  font-weight: bold;
+  color: white;
+
   margin: 0 25px 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: solid;
-  border-width: 1px;
-  border-radius: 5px;
+  height: 45px;
+  border: none;
+  border-radius: 25px;
   box-shadow: 0 0 5px #888;
-  padding: 10px 15px 10px 15px;
+  background-color: #318CE7;
+  padding: 10px 25px 10px 25px;
   position: absolute;
   right: 10px;
   transition: all 0.5s;
@@ -154,15 +160,7 @@ p
 .DashboardLogoutButton:hover
 {
   cursor: pointer;
-  background-color: #dcdcdc;
-}
-
-.DashboardLogoutButton p
-{
-  margin: 0;
-  font-size: small;
-  font-family: 'Fraunces', serif;
-  color: black;
+  border-radius: 5px;
 }
 
 .DashboardTitle
@@ -176,9 +174,10 @@ p
 .AdminDashboardInput
 {
   padding: 10px 15px 10px 15px;
-  width: 90%;
+  width: 50%;
   height: 25px;
   max-width: 600px;
+  min-width: 100px;
   margin: 10px 0 10px 0;
   
   border: solid;
@@ -192,52 +191,34 @@ p
   font-family: 'Fraunces', serif;
 }
 
-.AdminDashboardNumber
-{
-  padding: 10px 15px 10px 15px;
-  width: 90%;
-  height: 25px;
-  max-width: 600px;
-  margin: 10px 0 10px 0;
-  
-  border: solid;
-  border-radius: 25px;
-  border-color: black;
-  border-width: 1px;
-  box-shadow: 0 0 5px #888;
-  outline: none;
-
-  font-size: small;
-  font-family: 'Fraunces', serif;
-}
-
-.AdminDashboardNumber::-webkit-outer-spin-button,
-.AdminDashboardNumber::-webkit-inner-spin-button {
+.AdminDashboardInput::-webkit-outer-spin-button,
+.AdminDashboardInput::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.AdminDashboardNumber[type=number] {
+.AdminDashboardInput[type=number] {
   -moz-appearance: textfield;
 }
 
 .AdminDashboardButton
 {
-  background-color: white;
-  width: 90%;
+  background-color: #318CE7;
+  width: calc(50% + 30px);
   height: 45px;
   max-width: calc(600px + 30px);
+  min-width: calc(100px + 30px);
   padding: 10px 15px 10px 15px;
   margin: 10px 0 10px 0;
 
-  border: solid;
+  border: none;
   border-radius: 25px;
-  border-color: black;
-  border-width: 1px;
   box-shadow: 0 0 5px #888;
 
   font-size: small;
   font-family: 'Fraunces', serif;
+  font-weight: bold;
+  color: white;
 
   transition: all 0.5s;
 }
@@ -245,7 +226,7 @@ p
 .AdminDashboardButton:hover
 {
   cursor: pointer;
-  background-color: #dcdcdc;
+  border-radius: 5px;
 }
 
 .RecordBottomArea
@@ -333,8 +314,9 @@ p
 
 .ChangeImageContainer {
   padding: 15px 15px 15px 15px;
-  width: 250px;
-  height: 250px;
+  width: 50%;
+  height: auto;
+  aspect-ratio: 1/1;
   margin: 10px 0 10px 0;
   border: solid;
   border-radius: 25px;
@@ -376,7 +358,8 @@ p
   flex-direction: column;
   justify-content: center;
   padding: 10px 15px 10px 15px;
-  width: 90%;
+  width: 50%;
+  min-width: 100px;
   max-width: 600px;
   min-height: 25px;
   margin: 10px 0 10px 0;
