--- a/client/src/App.css
+++ b/client/src/App.css
@@ -617,3 +617,67 @@ p
   align-items: center;
   justify-content: center;
 }
+
+.SearchBar
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0 0 0;
+  padding: 10px;
+}
+
+.SearchBarBackground
+{
+  background-color: white;
+  padding: 10px;
+  width: 50%;
+  min-width: 100px;
+  max-width: 500px;
+
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #888;
+}
+
+.SearchBarInputArea
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.SearchBarResultArea{
+  margin: 5px 0 0 0;
+  padding: 0 5px 0 5px;
+
+}
+
+.SearchBarResultItem
+{
+  display: flex;
+  width: 100%;
+  margin: 1px;
+}
+
+.SearchBarResultItem:hover
+{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+
+.SearchBarInput
+{
+  width: 100%;
+  height: 100%;
+  margin: 0 0 0 5px;
+
+  border: none;
+  outline: none;
+
+  font-size: small;
+  font-family: 'Fraunces', serif;
+}
