--- a/client/src/App.css
+++ b/client/src/App.css
@@ -681,3 +681,39 @@ p
   font-size: small;
   font-family: 'Fraunces', serif;
 }
+
+.RecordBackground
+{
+  background-color: whitesmoke;
+  padding: 20px;
+  border: none;
+  border-radius: 10px;
+  margin: 20px;
+  box-shadow: 0px 0px 5px #888;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 80%;
+  min-width: 100px;
+  max-width: 250px;
+}
+
+.RecordInfoArea
+{
+  text-align: center;
+}
+
+.RecordImage
+{
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  aspect-ratio: 1/1;
+  border: none;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center;
+  margin: 0 0 15px 0;
+}
