--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,17 @@ p
   color: black;
 }
 
+.Hover
+{
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+.Hover:hover
+{
+  color: black;
+}
+
 .NoScroll::-webkit-scrollbar {
   display: none;
 }
@@ -520,7 +531,7 @@ p
   display: flex;
   flex-direction: row;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   scroll-behavior: smooth;
 }
 
@@ -607,7 +618,7 @@ p
   position: relative;
 
   min-width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
 }
 
 .AboutTextArea
@@ -637,7 +648,7 @@ p
 
 .SearchBarBackground
 {
-  background-color: white;
+  background-color: #F6EEE3;
   padding: 10px;
   width: 100%;
   min-width: 100px;
@@ -645,7 +656,7 @@ p
 
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px #888;
+  box-shadow: 0px 0px 15px #888;
 }
 
 .SearchBarInputArea
@@ -687,16 +698,17 @@ p
 
   font-size: small;
   font-family: 'Fraunces', serif;
+  background-color: #F6EEE3;
 }
 
 .RecordBackground
 {
-  background-color: whitesmoke;
-  padding: 20px;
+  background-color: #F6EEE3;
+  padding: 20px 20px 30px 20px;
   border: none;
   border-radius: 10px;
   margin: 20px;
-  box-shadow: 0px 0px 5px #888;
+  box-shadow: 0px 0px 15px #888;
 
   display: flex;
   flex-direction: column;
@@ -710,6 +722,12 @@ p
 .RecordInfoArea
 {
   text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .RecordImage
@@ -719,10 +737,11 @@ p
   height: auto;
   aspect-ratio: 1/1;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   background-size: cover;
   background-position: center;
   margin: 0 0 15px 0;
+  box-shadow: 0 0 5px #888;
 }
 
 .RecordList
