--- a/client/src/App.css
+++ b/client/src/App.css
@@ -757,3 +757,24 @@ p
   margin: 100px 0 20px 0;
   padding: 10px 0 40px 0;
 }
+
+.LoadMoreButton 
+{
+  margin: 0 0 50px 0;
+  padding: 10px 20px 10px 20px;
+  background-color: #F6EEE3;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px #888;
+
+  font-size: small;
+  font-family: 'Fraunces', serif;
+
+  transition: all 0.25s;
+}
+
+.LoadMoreButton:hover
+{
+  cursor: pointer;
+  border-radius: 5px;
+}
