--- a/client/src/App.css
+++ b/client/src/App.css
@@ -850,19 +850,15 @@ p
 {
   margin: 0 0 50px 0;
   padding: 10px 20px 10px 20px;
-  background-color: #F6EEE3;
+  background-color: #CABA9C;
   border: none;
-  border-radius: 10px;
-  box-shadow: 0px 0px 15px #888;
-
   font-size: small;
+  font-weight: 900;
   font-family: 'Fraunces', serif;
-
-  transition: all 0.25s;
+  color: #4D2D18;
 }
 
 .LoadMoreButton:hover
 {
   cursor: pointer;
-  border-radius: 5px;
 }
