--- a/client/src/App.css
+++ b/client/src/App.css
@@ -777,35 +777,38 @@ p
 
 .RecordBackground
 {
+  position: relative;
   background-color: #102820;
   border: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 80%;
-  min-width: 100px;
+  width: 100%;
   max-width: 250px;
-
-  padding-top: 30px;
-  padding-bottom: 40px;
-  padding-left: calc((100vw - (250px * 3)) / 6);
-  padding-right: calc((100vw - (250px * 3)) / 6);
+  height: auto;
+  aspect-ratio: 1/1;
+  border: none;
+  border-radius: 2px;
+  overflow: hidden;
 }
 
-.RecordInfoArea
-{
-  text-align: center;
-  position: relative;
+.RecordInfoArea {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 100%;
-  width: 100%;
+  justify-content: center; /* Centers vertically */
+  align-items: center;     /* Centers horizontally */
+  height: 100%;            /* Full height of the parent */
+  width: 100%;             /* Full width of the parent */
+  border: none;
+  border-radius: 2px;
+  transition: all 0.5s;
 }
 
 .RecordInfoArea p
 {
-  color: #CABA9C;
+  color: #e1e1e1;
+  font-size: large;
+  font-weight: 900;
 }
 
 .RecordImage
@@ -818,7 +821,7 @@ p
   border-radius: 2px;
   background-size: cover;
   background-position: center;
-  margin: 0 0 15px 0;
+  transition: all 0.5s;
 }
 
 .RecordList
