--- a/client/src/App.css
+++ b/client/src/App.css
@@ -795,10 +795,10 @@ p
   position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Centers vertically */
-  align-items: center;     /* Centers horizontally */
-  height: 100%;            /* Full height of the parent */
-  width: 100%;             /* Full width of the parent */
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;         
   border: none;
   border-radius: 2px;
   transition: all 0.5s;
@@ -826,42 +826,21 @@ p
 
 .RecordList
 {
-  display: grid;
-  row-gap: 150px;
+  display: flex;
+  flex-direction: column;
   justify-items: center;
-  margin: 200px 0 20px 0;
-  padding: 10px 0 40px 0;
+  margin: 200px 0 0 0;
+  width: 100%;
+  height: 100%;
 }
 
-@media only screen and (max-width: 940px) 
+.RecordListRow
 {
-  .RecordList
-  {
-    grid-template-columns: repeat(2, calc(100vw / 2));
-  }  
-}
-
-@media only screen and (min-width: 941px) 
-{
-  .RecordList
-  {
-    grid-template-columns: repeat(3, calc(100vw / 3));
-  }  
-}
-
-.LoadMoreButton 
-{
-  margin: 0 0 50px 0;
-  padding: 10px 20px 10px 20px;
-  background-color: #CABA9C;
-  border: none;
-  font-size: small;
-  font-weight: 900;
-  font-family: 'Fraunces', serif;
-  color: #4D2D18;
-}
-
-.LoadMoreButton:hover
-{
-  cursor: pointer;
+  background-color: #123524;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin: 100px 0 100px 0;
+  padding: 50px 0 50px 0;
 }
