--- a/client/src/App.css
+++ b/client/src/App.css
@@ -841,6 +841,7 @@ p
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin: 100px 0 100px 0;
+  margin: 0 0 200px 0;
   padding: 50px 0 50px 0;
+  transition: all 0.75s;
 }
