Search search functionality added. Clear search button added and tooltip message.

--- a/client/src/pages/SearchBarStyle.css
+++ b/client/src/pages/SearchBarStyle.css
@@ -47,6 +47,12 @@
 {
   color: #102820;
   font-size: x-large;
+  margin: 0 5px 0 0;
+}
+
+.ClearSearchButton:hover
+{
+    cursor: pointer;
 }
 
 .SearchBarInput
