--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,6 @@ h2
   font-family: 'Fraunces', serif;
   font-weight: lighter;
   color: white;
-  text-decoration: underline;
 }
 
 h3
@@ -575,70 +574,34 @@ p
   height: 100%;
 }
 
-.Header 
+.HomeHeader 
 {
   margin: 0;
-  padding: 10px 0 10px 0;
+  padding: 0 10vw 0 0;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: end;
   justify-content: center;
 }
 
-.HeaderIcon
+.AboutHeader 
 {
-  font-size: x-large;
-}
-
-.Header h1
-{
-  color: black;
-  padding: 0;
   margin: 0;
-}
-
-.Header .HomeHeaderLink
-{
-  font-family: 'Fraunces', serif;
-  text-align: center;
-  color: #CABA9C;
+  padding: 0 0 0 10vw;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-weight: 900;
-  position: absolute;
-  padding: 0;
-  margin: 40px 0 0 0;
-  right: 5%;
-}
-
-.Header .AboutHeaderLink
-{
-  font-family: 'Fraunces', serif;
-  text-align: center;
-  color: #4D2D18;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-weight: 900;
-  position: absolute;
-  padding: 0;
-  margin: 40px 0 0 0;
-  left: 5%;
-}
-
-.Header h2:hover
-{
-  cursor: pointer;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
 }
 
 .HomeTitle
 {
-  margin-top: 10vh;
+  margin-top: 0;
   margin-bottom: 10vh;
   font-weight: 900;
-  font-size: clamp(4rem, 2.5rem + 4vw, 7rem);
+  font-size: clamp(2rem, 2rem + 4vw, 7rem);
   color: #CABA9C;
   background-clip: text;
   -webkit-background-clip: text;
@@ -656,7 +619,7 @@ p
 
 .AboutTitle
 {
-  margin-top: 10vh;
+  margin-top: 0;
   margin-bottom: 10vh;
   font-weight: 900;
   font-size: clamp(4rem, 2.5rem + 4vw, 7rem);
@@ -672,15 +635,6 @@ p
   font-size: clamp(0.8rem, 0.3rem + 0.8vw, 1.5rem);
 }
 
-.PortfolioLinkText
-{
-  text-align: center;
-  position: absolute;
-  right: auto;
-  left: auto;
-  bottom: 50px;
-}
-
 .AboutTextArea
 {
   width: 80%;
@@ -694,28 +648,6 @@ p
   align-items: center;
 }
 
-.BackToTopButtonArea
-{  
-  margin: 0 0 50px 0;
-}
-
-.BackToTopButtonArea h2
-{
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: 'Fraunces', serif;
-  color: #CABA9C;
-  font-size: large;
-  font-weight: 900;
-}
-
-.BackToTopButtonArea:hover
-{
-  cursor: pointer;
-}
-
 .RecordBackground
 {
   position: relative;
@@ -723,12 +655,14 @@ p
   border: none;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
   max-width: 250px;
   height: auto;
   aspect-ratio: 1/1;
   border: none;
   border-radius: 2px;
+  box-shadow: 0 0 5px #102820;
   overflow: hidden;
   transition: all 0.5s;
 }
@@ -751,6 +685,11 @@ p
   color: #4D2D18;
   font-size: large;
   font-weight: 900;
+}
+
+.RecordInfoArea p:hover
+{
+  cursor: default;
 }
 
 .RecordImage
@@ -815,4 +754,26 @@ p
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.FooterArea
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #123524;
+  width: 100%;
+  padding: 15px;
+}
+
+.FooterIcon
+{
+  color: #CABA9C;
+  font-size: medium;
+}
+
+.FooterP
+{
+  color: #CABA9C;
 }
