--- a/client/src/pages/SearchBarStyle.css
+++ b/client/src/pages/SearchBarStyle.css
@@ -13,6 +13,7 @@
 {
     background-color: #102820;
     height: 2px;
+    min-height: 2px;
     width: 100%;
 }
 
@@ -20,6 +21,7 @@
 {
     background-color: #102820;
     width: 2px;
+    min-width: 2px;
     height: 100px;
 }
 
